Parse Excel file and persist to database
Can now persist all entites:
- CostCenter
- User
- Company
- Inventory Item
- Comment

Will make sure that InventoryItems do not already exist, as well as Company names, User names and CostCenter descriptions, before persisting them to the DB.